fix some styling issues with alignment and html view height (#35)

--- a/src/components/studentHome.module.css
+++ b/src/components/studentHome.module.css
@@ -1,6 +1,8 @@
 .mainContainer {
-	width: 100%;
-	max-width: 100vw;
+	text-align: left;
+	max-width: 100%;
 	height: 70vh;
+	margin: 40px;
 	background-color: rgb(255, 255, 255);
+	border-radius: 20px;
 }
